web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-in-class-compute-property/arrow-func-param-rhs-async/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,33)
1|async (name = class SomeClass {[await] = 10;}) => {}
 |                               ^
